--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type":"module",
   "scripts": {
     "start": "node server.js"
   },
   "author": "mahi",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   }
 }
